5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1633_2940.log
== TEST (2019-04-02 18:06:43) 
-- CODE:
a=11268.25
print(a)
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:04) 
-- CODE:
a=11268.25
print(a)
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:09) 
-- CODE:
a=11268
print(a)
-- OUTPUT:
11268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:45) 
-- CODE:
a=11268
print(a)
-- OUTPUT:
11268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:07:48) 
-- CODE:
a=11268
print(a)
-- OUTPUT:
11268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:15) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(roud(vf,2)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:37) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:12:50) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf, 2)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:13) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf, 2)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:23) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf, 2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:34) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:13:36) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:00) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:01) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:14:20) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(round(vf,2))
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:13) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)**n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:15) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)**n
print(round(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:48) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)**n
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:50) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)**n
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:54) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(vf)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:55) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(vf)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:15:56) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(vf)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:00) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(vf)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:01) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(vf)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:55) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(fi)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:16:56) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)n
print(fi)
-- ERROR:
File "XXXX", line 4
    vf=vi(1+j)n
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:06) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)
print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:07) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)
print(fi)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:25) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:17:53) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi
print(vf)
-- OUTPUT:
10000
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:23) 
-- CODE:
vi=10000
j=0.01
n=12
vf=(1+j)
print(vf)
-- OUTPUT:
1.01
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:35) 
-- CODE:
vi=10000
j=0.01
n=12
vf=(1+j)**n
print(vf)
-- OUTPUT:
1.1268250301319698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:18:47) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi(1+j)**n
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:19:21) 
-- CODE:
vi=10000
j=0.01
n=12
vf=(1+j)**n
va=vf*j
print(va)
-- OUTPUT:
0.011268250301319697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:20:44) 
-- CODE:
vi=10000
j=0.01
n=12
vf=j*(1+j)**n

print(vf)
-- OUTPUT:
0.011268250301319697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:02) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n

print(vf)
-- OUTPUT:
11268.250301319698
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:20) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n

print(roud(vf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(roud(vf,2))
NameError: name 'roud' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:27) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n

print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:43) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.152574
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:50) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.270074
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:51) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.134013
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:51) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.32529
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:21:51) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.178534
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:21:51) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:22:06) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.184936
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:06) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:07) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:22:08) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.140027
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:08) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:23:11) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.273935
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:13) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:23:56) 
-- CODE:
vi=20000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.153956
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:57) 
-- CODE:
vi=20000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:05) 
-- CODE:
vi=100000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
112682.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:24:09) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.148188
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:24:10) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.172689
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:39) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:24:41) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.161955
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:24:45) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.149713
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:24:57) 
-- CODE:
vi=10000
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:16) 
-- CODE:
vi=7356346
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
8289314.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:22) 
-- CODE:
vi=7356346454
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
8289315314.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:24) 
-- CODE:
vi=7356346454
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.142966
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
8289315314.69
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
8289315314.69
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:25) 
-- CODE:
vi=7356346454
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.167107
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
8289315314.69
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
8289315314.69
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:26) 
-- CODE:
vi=7356346454
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
8289315314.69
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:40) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:42) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.14645
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:43) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.159941
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:43) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.156795
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:44) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.174363
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:44) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.195113
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:44) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.160487
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:44) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.206615
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:44) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.190202
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
2.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
2.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:45) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.108937
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:45) 
-- CODE:
vi=2
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))
-- EXECUTION TIME:
0.105667
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:38) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:43) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.147137
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:44) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.176276
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:52) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:58) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.131075
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:59) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.156816
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:28) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:29) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.0940449
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:30) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.208957
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:47:55) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi(1+j)**n
print(round(vf,2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vf=vi(1+j)**n
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:03) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:05) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.192055
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:48) 
-- CODE:
vi=float(input("valor  "))
j=float(0.01)
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.140809
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:48:49) 
-- CODE:
vi=float(input("valor  "))
j=float(0.01)
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.166604
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
valor  22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
valor  11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:48:50) 
-- CODE:
vi=float(input("valor  "))
j=float(0.01)
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:10) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:11) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.10496
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:12) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.138091
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:22) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0,01)**n
print(round(vf,2))




-- ERROR:
File "XXXX", line 4
    vf=vi*(1+0,01)**n
                ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:27) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:28) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.164894
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:29) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.163912
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:29) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.137864
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:29) 
-- CODE:
vi=float(input("valor  "))

n=12
vf=vi*(1+0.01)**n
print(round(vf,2))




-- EXECUTION TIME:
0.197637
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:49:47) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:58) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.187181
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:58) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.17901
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:59) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.177607
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:49:59) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.170278
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:02) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
22536.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:24) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.174776
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:24) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.197396
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
22536.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:24) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.255886
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
22536.5
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:24) 
-- CODE:
vi=float(input("valor  "))
j=0.01
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.115356
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1633/2940/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:50:53) 
-- CODE:
vi=float(input("valor  "))
j=0.1
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- OUTPUT:
62768.57
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:57) 
-- CODE:
vi=float(input("valor  "))
j=0.1
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.130329
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
62768.57
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
31384.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:58) 
-- CODE:
vi=float(input("valor  "))
j=0.1
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.228222
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
62768.57
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
62768.57
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:50:58) 
-- CODE:
vi=float(input("valor  "))
j=0.1
n=12
vf=vi*(1+j)**n
print(round(vf,2))




-- EXECUTION TIME:
0.196726
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
62768.57
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
31384.28
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
